--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/0a86d3bf39.js" crossorigin="anonymous"></script>
@@ -17,24 +17,23 @@
     <link rel="icon" type="image/x-icon" href="{% static 'icons/favicon.ico' %}">
     <title>ShopSavvy</title>
 </head>
-<body class="d-grid w-100 overflow-x-hidden">
-<div class="row d-flex flex-nowrap align-items-center align-content-center py-3 ps-0 mx-auto w-100 position-fixed"
-     id="header">
-    <div class=" col-lg-1 col-sm-1 justify-content-left ps-2">
-        <button type="button" data-bs-toggle="collapse" data-bs-target="#sidebarContent" aria-expanded="false"
-                aria-controls="sidebarContent" class="btn primary-color">
+<body class="bg-dark">
+<div class="align-items-center d-flex flex-nowrap me-0 mx-auto pe-0 position-fixed py-3 row w-100" id="header">
+    <div class="col-2 col-md-1 ps-2">
+        <button type="button" data-bs-toggle="collapse" data-bs-target="#sidebar" aria-expanded="true"
+                aria-controls="sidebar" class="btn primary-color">
             <i class="fa fa-bars  fa-md"></i>
         </button>
     </div>
-    <div class="col-lg-1"></div>
-    <div class="col-lg-6 offset-lg-1 col-sm-2">
+    <div class="col-5 col-md-3 col-lg-2 justify-content-left ms-2 primary-color">ShopSavvy</div>
+    <div class="d-none d-md-block col-md-5 col-lg-6">
         <form id="searchForm">
             <div class="input-group mx-auto w-100 border-solid border-1" id="searchbar" style="border-color:#E8DCCD">
-                <input class="form-control ps-3 rounded-start-pill" type="search" id="search" placeholder="Search"
+                <input class="col-8 form-control ps-3 rounded-start-pill" type="search" id="search" placeholder="Search"
                        aria-label="Search" aria-describedby="basic-addon2">
-                <div class="form-group input-group-append border-solid border-1">
-                    <div class="dropdown">
-                        <button class="btn pe-3 dropdown-toggle" id="filterBtn" type="button"
+                <div class="col-2 col-lg-2 col-xl-1 input-group-append border-solid border-1">
+                    <div class="dropdown w-100">
+                        <button class="btn pe-3 w-100 dropdown-toggle" id="filterBtn" type="button"
                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="true"
                                 onclick="this.dropdown('toggle')"><i
                                 class="fa fa-filter"></i>
@@ -54,32 +53,32 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group input-group-append border-solid border-1">
-                    <button class="btn rounded-end-pill pe-3" type="submit" id="searchBtn">
+                <div class="col-2 col-lg-1 input-group-append border-solid border-1">
+                    <button class="btn w-100 rounded-end-pill pe-3" type="submit" id="searchBtn">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
             </div>
         </form>
     </div>
-    <div class="col-lg-1 col-sm-1 offset-lg-2 d-flex justify-content-end">
-        <div class="col">
+    <div class="col-5 col-md-3 d-flex">
+        <div class="col-8 col-md-9 d-flex justify-content-md-start justify-content-sm-start py-1">
             {% if user.is_authenticated %}
-                <a href="/logout" class="hover btn btn-dark btn-sm d-inline" id="loginBtn">Logout</a>
+                <a href="/logout" class="hover btn btn-dark p-1 d-inline" id="loginBtn">Logout</a>
             {% else %}
-                <a href="/login" class="hover btn btn-dark btn-sm d-inline" id="loginBtn">Login</a>
+                <a href="/login" class="hover btn btn-dark p-1 d-inline" id="loginBtn">Login</a>
             {% endif %}
         </div>
-        <div class="col" style="margin-inline:15px">
+        <div class="align-items-center col-4 col-md-3 d-flex justify-content-end">
             <a href="/cart" class="btn primary-color justify-content-center d-inline"><i
                     class="fa fa-shopping-cart fa-lg"></i></a>
         </div>
     </div>
 </div>
-<div class="row d-flex h-100 pt-5 align-items-stretch" id="main">
-        {% include 'sidebar.html' %}
-        {% block content %}
-        {% endblock %}
+{% include 'sidebar.html' %}
+<div class="d-flex pt-5" id="main">
+    {% block content %}
+    {% endblock %}
 </div>
 </body>
 </html>
