--- a/static/css/productcard.css
+++ b/static/css/productcard.css
@@ -3,10 +3,11 @@
     opacity: 1;
     width:100%;
     height:100%;
-    object-fit: scale-down;
+    object-fit: cover;
     border-radius: 8px;
     transition: .5s ease;
     backface-visibility: hidden;
+    aspect-ratio: 1/1;
 }
 
 
