--- a/templates/cart.html
+++ b/templates/cart.html
@@ -5,7 +5,8 @@
         <div class="col-12 ps-4 pt-4 d-flex">
             <div class="container d-flex flex-wrap col-12">
                 {% if cartItems.count > 0 %}
-                    <div class="row toast w-100" id="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="3000">
+                    <div class="row toast w-100" id="toast" role="alert" aria-live="assertive" aria-atomic="true"
+                         data-delay="3000">
                         <div class="toast-body text-center text-white"></div>
                     </div>
                     <div class="col-12 mt-5 mb-3">
@@ -13,40 +14,48 @@
                         <span class="primary-color">({{ cartCount }} items)</span>
                     </div>
                     {% for item in cartItems %}
-                        <div class="cart-item border-top border-bottom px-2 py-3 d-flex col-12 primary-color mb-3">
-                            <div class="product-name d-flex flex-wrap col-12 col-md-4">
+                        <div class="cart-item border-top flex-wrap border-bottom px-2 py-3 d-flex col-12 primary-color mb-3">
+                            <div class="product-name d-flex flex-wrap order-1 col-10 mb-2 col-lg-3">
                                 <div class="col-12">
-                                    <h5>
+                                    <h6>
                                         <a href="{% url 'product_detail' product_id=item.product.productId %}">{{ item.product.name }}</a>
-                                    </h5>
+                                    </h6>
                                 </div>
                                 <div class="col-12">
                                     <a href="{% url 'vendor' store_id=item.product.soldByStoreId_id %}"
                                        class="primary-color">{{ item.product.soldByStoreId.name }}</a>
                                 </div>
                             </div>
-                            <div class="align-items-center col-12 col-md-1 d-flex">
-                                <input class="item-qty col-12 btn p-2 btn-primary quantity-input" type="number"
-                                       value="{{ item.quantity }}" min="1"/>
-                                <button type="submit" class="col-9 p-1 btn-primary btn update-btn" id="update-quantity"
-                                        data-product-id="{{ item.product.productId }}" style="display: none; margin-left:5px; z-index: 10; font-size: 0.75em;">Update Quantity</button>
+                            <div class="align-items-center col-12 col-lg-4 order-3 order-lg-2 my-2 d-flex flex-wrap">
+                                <div class="col-4 d-flex justify-content-left">
+                                    <input class="item-qty col-12 btn p-2 btn-primary quantity-input" type="number"
+                                           value="{{ item.quantity }}" min="1"/>
+                                </div>
+                                <div class="col-8 d-flex">
+                                    <button type="submit" class="bg-success btn btn-primary d-none p-1 ms-1 update-btn"
+                                            id="update-quantity"
+                                            data-product-id="{{ item.product.productId }}">
+                                        Update
+                                    </button>
+                                </div>
                             </div>
-                            <div class="col-12 col-md-3">
-                                <h6 class="col-12 text-center">Item Price</h6>
-                                <div class="col-12 text-center">${{ item.product.price }}</div>
+                            <div class="col-6 col-lg-2 d-flex flex-wrap justify-content-start order-4 order-lg-3">
+                                <h6 class="col-12 text-lg-center text-start">Item Price</h6>
+                                <div class="col-12 text-lg-center text-start">${{ item.product.price }}</div>
                             </div>
-                            <div class="col-12 col-md-3">
-                                <h6 class="col-12 text-center">Item Total</h6>
-                                <div class="col-12 text-center">${{ item.total_price }}</div>
+                            <div class="col-6 col-lg-2 d-flex flex-wrap order-5 order-lg-4">
+                                <h6 class="col-12 text-lg-center text-start">Item Total</h6>
+                                <div class="col-12 text-lg-center text-start">${{ item.total_price }}</div>
                             </div>
-                            <div class="align-items-center col-12 col-md-1 d-flex justify-content-center">
-                                <a href={% url 'removeFromCart' product_id=item.product.productId %}><i class="fa-solid text-danger fa-trash"></i></a>
+                            <div class="align-items-center col-2 col-lg-1 d-flex justify-content-center order-2 order-lg-5">
+                                <a href={% url 'removeFromCart' product_id=item.product.productId %}><i
+                                        class="fa-solid text-danger fa-trash"></i></a>
                             </div>
                         </div>
                     {% endfor %}
-                    <div class="col-12 d-flex justify-content-between">
-                        <h4 class="primary-color">Item Subtotal: ${{ cartTotal }}</h4>
-                        <a href="/checkout" id="proceed-checkout" class="col-3 btn-primary bg-success btn">Proceed to
+                    <div class="col-12 d-flex flex-wrap justify-content-between">
+                        <h4 class="primary-color col-12 text-center text-lg-start col-lg-6">Item Subtotal: ${{ cartTotal }}</h4>
+                        <a href="/checkout" id="proceed-checkout" class="bg-success btn btn-primary col-12 col-lg-3 ms-auto">Proceed to
                             Checkout</a>
                     </div>
                 {% else %}
@@ -61,6 +70,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="{% static 'js/cart.js' %}"></script>
     <script src="{% static 'js/update-qty.js' %}"></script>
 {% endblock %}
