--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -4,98 +4,104 @@
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
         <div class="m-auto h-100 w-100 gap-3 p-3">
             <div class="container mx-auto flex-wrap w-100 w-lg-75">
-                <div class="col-12 col-md-6 h-100">
-                    <div class="position-relative">
-
-                        <!-- Full-width images with number text -->
-                        <div class="mySlides">
-                            <div class="numbertext">1 / 6</div>
-                            <img src="{{ product.image.url }}" style="width:100%">
-                        </div>
-
-                        <div class="mySlides">
-                            <div class="numbertext">2 / 6</div>
-                            <img src="{{ product.image.url }}" style="width:100%">
-                        </div>
-
-                        <div class="mySlides">
-                            <div class="numbertext">3 / 6</div>
-                            <img src="{{ product.image.url }}" style="width:100%">
-                        </div>
-
-                        <div class="mySlides">
-                            <div class="numbertext">4 / 6</div>
-                            <img src="{{ product.image.url }}" style="width:100%">
-                        </div>
-
-                        <div class="mySlides">
-                            <div class="numbertext">5 / 6</div>
-                            <img src="{{ product.image.url }}" style="width:100%">
-                        </div>
-
-                        <div class="mySlides">
-                            <div class="numbertext">6 / 6</div>
-                            <img src="{{ product.image.url }}" style="width:100%">
-                        </div>
-
-                        <!-- Next and previous buttons -->
-                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-                        <!-- Image text -->
-                        <div class="caption-container">
-                            <p id="caption"></p>
-                        </div>
-
-                        <!-- Thumbnail images -->
-                        <div class="row d-none d-md-block">
-                            <div class="column">
-                                <img class="demo cursor" src="{{ product.image.url }}" style="width:100%"
-                                     onclick="currentSlide(1)" alt="The Woods">
+                <div class="col-12 col-md-6 h-100 px-3">
+                    <div class="d-flex flex-wrap justify-content-center">
+                        <div class="d-flex flex-wrap col-12 position-relative mx-0" id="slideContainer"
+                             style="max-width: 500px;">
+                            {% for image in product.images %}
+                                <div class="mySlides {% if forloop.first %}d-flex{% else %}d-none{% endif %} col-12 justify-content-center align-content-center">
+                                    <div class="numbertext"><span class="slideNum">{{ forloop.counter }}</span> / <span
+                                            class="slideSize">{{ product.images.count }}</span></div>
+                                    <img class="col-12" src="{{ image.image.url }}"
+                                         style="object-fit: cover; aspect-ratio: 1/1; max-height: 500px;">
+                                </div>
+                            {% endfor %}
+                            <div class="mySlides d-none col-12" id="addSlide">
+                                <button type="button"
+                                        class="hover border p-0 btn btn-dark col-12"
+                                        id="imageBtn" style="max-height: 500px;object-fit: cover;aspect-ratio: 1/1;"
+                                        data-bs-toggle="modal"
+                                        data-bs-target="#imageInputModal">
+                                    <i class="fa fa-pencil fa-lg" style="visibility: inherit"></i>
+                                </button>
                             </div>
-                            <div class="column">
-                                <img class="demo cursor" src="{{ product.image.url }}" style="width:100%"
-                                     onclick="currentSlide(2)" alt="Cinque Terre">
-                            </div>
-                            <div class="column">
-                                <img class="demo cursor" src="{{ product.image.url }}" style="width:100%"
-                                     onclick="currentSlide(3)" alt="Mountains and fjords">
-                            </div>
-                            <div class="column">
-                                <img class="demo cursor" src="{{ product.image.url }}" style="width:100%"
-                                     onclick="currentSlide(4)" alt="Northern Lights">
-                            </div>
-                            <div class="column">
-                                <img class="demo cursor" src="{{ product.image.url }}" style="width:100%"
-                                     onclick="currentSlide(5)" alt="Nature and sunrise">
-                            </div>
-                            <div class="column">
-                                <img class="demo cursor" src="{{ product.image.url }}" style="width:100%" onclick="currentSlide(6)"
-                                     alt="Snowy Mountains">
+
+                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+                            <div class="col-12 d-flex justify-content-center" style="max-width:500px;">
+                                <div class="d-flex mt-2 flex-nowrap" id="demoContainer">
+                                    {% for image in product.images %}
+                                        <div class="col-2 d-flex" style="aspect-ratio: 1/1;object-fit: cover;">
+                                            <img class="demo cursor"
+                                                 src="{{ image.image.url }}"
+                                                 style="max-height: 500px; width:100%; object-fit: cover;"
+                                                 onclick="currentSlide(1)" alt="image">
+                                        </div>
+                                    {% endfor %}
+                                    <div class="col-2 d-flex" id="addDemo"
+                                         style="min-width:16.6%;max-height: inherit">
+                                        <div class="align-content-center col-12 cursor demo" style="width:fit-content"
+                                             onclick="currentSlide(1)"><i class="fa fa-plus fa-lg px-2"
+                                                                          style="color:#e3d7c9"></i></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 d-flex fit-content flex-wrap px-2">
+                    <h3 class="col-12 primary-color">Edit Product</h3>
                     <div class="col-12 mb-2 pe-5">
                         <label for="product-name" class="col-12 col-lg-4 primary-color">Product Name:</label>
-                        <input id="product-name" type="text" class="col-12 col-lg-7 btn p-0 btn-primary" value="{{ product.name }}" />
+                        <input id="product-name" type="text" class="col-12 col-lg-7 btn p-0 btn-primary"
+                               value="{{ product.name }}"/>
                     </div>
                     <div class="col-12 pe-5 mb-2">
                         <label for="product-price" class="col-12 col-lg-4 primary-color">Price: </label>
-                        <input id="product-price" class="col-12 col-lg-7 btn p-0 btn-primary" type="number" value="{{ product.price }}"/>
+                        <input id="product-price" class="col-12 col-lg-7 btn p-0 btn-primary" type="number"
+                               value="{{ product.price }}"/>
                     </div>
                     <div class="col-12 pe-5 mb-2">
                         <label for="product-qoh" class="col-12 col-lg-4 primary-color">Quantity On Hand: </label>
-                        <input id="product-qoh" class="col-12 col-lg-7 btn p-0 btn-primary" type="number" value="{{ product.qoh }}"/>
+                        <input id="product-qoh" class="col-12 col-lg-7 btn p-0 btn-primary" type="number"
+                               value="{{ product.qoh }}"/>
                     </div>
                     <div class="col-12 d-flex flex-wrap my-2">
                         <label for="product-description" class="col-12 primary-color">Product Description</label>
-                        <div contenteditable="true" id="product-description" class="col-12 p-2 fit-content primary-color border">{{ product.description }}"</div>
+                        <div contenteditable="true" id="product-description"
+                             class="col-12 p-2 fit-content primary-color border">{{ product.description }}"
+                        </div>
                     </div>
 
                     <div class="col-12 d-flex mt-3">
                         <button type="submit" id="update-product" class="col-12 btn-primary btn">Update Product</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="imageInputModal" tabindex="-1"
+             aria-labelledby="imageInputModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog" style="top:25%">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="imageInputModalLabel">Upload Image</h5>
+                        <button type="button" class="btn-close hover" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <label for="imageInput">
+                            <input type="file" id="imageInput" accept="image/png, image/jpeg">
+                        </label>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn hover" data-bs-dismiss="modal"
+                                onclick="close()">Close
+                        </button>
+                        <button type="button" class="btn hover" data-bs-dismiss="modal"
+                                onclick="addImage()">Save changes
+                        </button>
                     </div>
                 </div>
             </div>
