--- a/templates/home.html
+++ b/templates/home.html
@@ -5,30 +5,36 @@
 {% endblock %}
 {% block content %}
     <div class="col d-flex flex-column overflow-hidden w-100 h-100 pt-3" id="content">
-        <div class="w-100 h-100">
-            <div class="row d-flex flex-wrap w-100 rounded-1 align-content-center position-relative">
-                <div class="col-1 arrow-icon left-arrow btn btn-primary my-2 position-absolute" id="left-arrow">
+        <div class="d-flex flex-nowrap col-12 align-content-center position-relative">
+            <div class="col-2 col-lg-1 pe-2 d-flex justify-content-end">
+                <div class="arrow-icon left-arrow btn bg-dark btn-primary my-2" id="left-arrow">
                     <i class="fa-solid fa-arrow-left"></i>
                 </div>
-                <div class="col-11 d-flex mx-auto overflow-x-hidden py-2" id="categories-container">
-                    <div class="d-flex categories-wrapper">
-                        {% for key, value in categories %}
-                            <a class="btn btn-primary col-lg-2 mx-1"
-                               href="{% url 'categoryFilter' category=key %}">{{ value }}</a>
-                        {% endfor %}
-                    </div>
+            </div>
+
+            <div class="align-items-center col-8 col-lg-10 d-flex mx-auto overflow-x-hidden" id="categories-container">
+                <div class="d-flex">
+                    {% for key, value in categories %}
+                        <a class="btn btn-primary mx-1 p-1 text-center w-100" style="
+                                                                max-height: 50px;
+                                                                min-width: 220px;
+                                                                text-align: center;"
+                           href="{% url 'categoryFilter' category=key %}">{{ value }}</a>
+                    {% endfor %}
                 </div>
-                <div class="col-1 arrow-icon right-arrow btn btn-primary my-2 position-absolute" id="right-arrow">
+            </div>
+            <div class="col-2 col-lg-1 d-flex justify-content-start ps-2">
+                <div class="arrow-icon right-arrow bg-dark btn btn-primary my-2" id="right-arrow">
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
             </div>
-            <div class="row w-100 mx-auto position-relative pt-2">
-                <div class="container d-grid w-100 flex-wrap"
-                     style="grid-template-columns: repeat(6, 15%); grid-gap: 2%">
-                    {% for product in products %}
-                        {% include 'product_card.html' %}
-                    {% endfor %}
-                </div>
+
+        </div>
+        <div class="row w-100 mx-auto position-relative pt-2">
+            <div class="w-100 d-flex flex-wrap">
+                {% for product in products %}
+                    {% include 'product_card.html' %}
+                {% endfor %}
             </div>
         </div>
     </div>
