--- a/static/css/productdetail.css
+++ b/static/css/productdetail.css
@@ -23,7 +23,7 @@
 .next {
     cursor: pointer;
     position: absolute;
-    top: 40%;
+    top: 50%;
     width: auto;
     height: auto;
     padding: 16px;
@@ -34,6 +34,7 @@
     border-radius: 0 3px 3px 0;
     user-select: none;
     -webkit-user-select: none;
+    text-decoration: none;
 }
 
 /* Position the "next button" to the right */
