--- a/static/css/storefront.css
+++ b/static/css/storefront.css
@@ -26,3 +26,15 @@
     color: #E8DCCD;
 
 }
+
+#bannerDisplay{
+    aspect-ratio: 5/1;
+    object-fit: cover;
+    min-height:250px
+}
+
+#logoDisplay{
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    max-height: 200px;
+}
