--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -2,18 +2,17 @@
 {% load static %}
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/productdetail.css' %}">
-    <script src="{% static 'js/product-detail.js' %}"></script>
 {% endblock %}
 {% block content %}
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
-        <div class="m-auto h-100 w-100 gap-3 p-3">
-            <div class="row container mx-auto flex-wrap w-100 w-lg-75">
-                <div class="col-12 col-md-6 h-100">
-                    <div class="pe-2 position-relative">
+        <div class="m-auto h-100 w-100 gap-3">
+            <div class="container mx-auto px-0 flex-wrap w-100 w-lg-75">
+                <div class="col-12 col-lg-6 d-flex h-100 justify-content-center">
+                    <div class="col-12 position-relative">
 
                         {% for image in product.images %}
                             <div class="mySlides">
-                                <img src="{{ image.image.url }}" style="width:100%">
+                                <img src="{{ image.image.url }}" style="width:100%;object-fit: cover;aspect-ratio: 1/1;max-height: 500px;min-height: 300px;">
                             </div>
                         {% endfor %}
 
@@ -37,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 d-flex fit-content flex-wrap px-2">
+                <div class="col-12 col-lg-6 d-flex fit-content flex-wrap px-2">
                     <div class="col-12">
                         <h1 class="primary-color">{{ product.name }}</h1>
                     </div>
@@ -56,7 +55,7 @@
                     </div>
                     <div class="col-12 d-flex pe-5">
                         <h3 class="col-5 primary-color"><span>Price:</span> ${{ product.price }}</h3>
-                        <input class="col-4 btn p-0 btn-primary" type="number" id='quantity' placeholder="Quantity"/>
+                        <input class="col-4 my-auto btn p-0 btn-primary" style="height: 45px;" type="number" id='quantity' placeholder="Quantity"/>
                     </div>
                     <div class="col-12 d-flex mt-3">
                         <button class="col-12 btn-primary btn" id="add_to_cart"
@@ -116,30 +115,5 @@
             {% endif %}
         </div>
     </div>
-    <script>
-        function toggleReview() {
-            let reviewForm = document.getElementById('reviewDiv');
-            let leaveReviewBtn = document.getElementById('leaveReviewBtn');
-
-            reviewForm.style.display = reviewForm.style.display === 'none' ? 'block' : 'none';
-            reviewForm.disabled = !reviewForm.disabled;
-            leaveReviewBtn.innerHTML = leaveReviewBtn.innerHTML === 'Write a Review' ? 'Cancel' : 'Write a Review';
-        }
-
-        // Define a function to handle the button click event
-        function redirectToReviewPage() {
-            // Get the product ID from the button's value attribute
-            var productId = document.getElementById('product_review').value;
-
-            // Construct the URL for redirection
-            var redirectUrl = '/review-product/' + productId;
-
-            // Redirect the browser to the constructed URL
-            window.location.href = redirectUrl;
-        }
-
-        // Attach the redirectToReviewPage function to the button's click event
-        document.getElementById('product_review').addEventListener('click', redirectToReviewPage);
-    </script>
     <script src="{% static 'js/product-detail.js' %}"></script>
 {% endblock %}
